<resources>
    <string name="app_name">Shoe Store</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_title">Login to Shoestore</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="welcome_page_title">Welcome to Shoestore</string>
    <string name="welcome_page_subtitle">An Inventory for all your shoes</string>
    <string name="instruction_body">You can add a new shoe to the list of shoes. \nYou can also tap each of your items to view details about that shoe.</string>
    <string name="instruction_title">How to use Shoestore</string>
    <string name="continue_btn_text">Continue</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="welcome_btn_text">"Let's go!"</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="shoe_detail">Shoe Detail</string>
    <string name="add_shoe">Add a shoe</string>
</resources>
